--- a/themes-files/nocturnal.theme.css
+++ b/themes-files/nocturnal.theme.css
@@ -5,7 +5,7 @@
 * @invite PZdnCVD
 * @version 3.0.0
 */
-@import url("https://codedotspectra.github.io/themes/themes-cores/nocturnal.css");
+@import url("https://raw.githubusercontent.com/xDeonn/themes/master/themes-cores/nocturnal.css");
 /*
                                                                                                                                                                      
                                                                                                                                                                      
@@ -33,29 +33,14 @@ NNNNNNNN         NNNNNNN   ooooooooooo       cccccccccccccccc          ttttttttt
 @import url("https://codedotspectra.github.io/themes/core/badges.css");
 
 @import url("https://codedotspectra.github.io/themes/core/hljs.css"); /* Better Hljs */
-@import url("https://discordstyles.github.io/RadialStatus/base.css"); /* Radial Status */
 :root {
-  --backgroundColor01: #1e2731;
-  --backgroundColor02: #12171d;
-  --mainColor: #2275c9;
-  --gradientColor01: #00F260;
-  --gradientColor02: #0575E6;
+  --backgroundColor01: #242424;
+  --backgroundColor02: #121212;
+  --mainColor: #ff7800;
+  --gradientColor01: #ff7800;
+  --gradientColor02: #000000;
 
   /* Better Hljs */
   --backgroundCode: #1e2731;
   --backgroundName: rgba(0, 0, 0, .2);
-
-  /* Radial Status */
-  --rs-small-spacing: 2px;
-  --rs-large-spacing: 3px;
-  --rs-width: 2px;
-  --rs-avatar-shape: 50%;
-  --rs-online-color: #43b581;
-  --rs-idle-color: #faa61a;
-  --rs-dnd-color: #f04747;
-  --rs-offline-color: #636b75;
-  --rs-streaming-color: #643da7;
-  --rs-invisible-color: #747f8d;
-  --rs-phone-visible: block;
-  --rs-phone-color: var(--rs-online-color);
 }
